# tau-gsettings-schemas

./: README.md  anda.hcl  co.tauos.desktop.appearance.gschema.xml  com.fyralabs.desktop.appearance.gschema.xml  meson.build  tau-gsettings-schemas.spec
.github/workflows/: package.yml
